[package]
authors = ["Anthony Dodd <dodd.anthonyjosiah@gmail.com>"]
categories = []
description = "Kubernetes leader election using the coordination.k8s.io API."
edition = "2021"
keywords = []
license = "MIT/Apache-2.0"
name = "kube-coordinate"
version = "0.1.2"

[dependencies]
chrono = {version = "0.4.31", default-features = false}
futures = {version = "0.3.29", default-features = false}
k8s-openapi = {version = "0.20.0", default-features = false, features = ["v1_26"]}
kube = {version = "0.87", default-features = false, features = ["client", "runtime"]}
rand = {version = "0.8.5", default-features = false}
thiserror = {version = "1.0.50", default-features = false}
tokio = {version = "1.34.0", default-features = false, features = ["macros", "sync", "time"]}
tracing = {version = "0.1.40", default-features = false}
