[package]
authors = ["Anthony Dodd <dodd.anthonyjosiah@gmail.com>"]
categories = ["asynchronous", "api-bindings"]
description = "Kubernetes leader election using the coordination.k8s.io API."
edition = "2021"
keywords = ["kubernetes", "election", "coordination", "consensus", "lease"]
license = "MIT/Apache-2.0"
name = "kube-coordinate"
version = "0.2.0"

[dependencies]
chrono = {version = ">=0.4,<0.5", default-features = false}
futures = {version = ">=0.3,<0.4", default-features = false}
k8s-openapi = {version = ">=0.20,<1", default-features = false, features = ["v1_26"]}
kube = {version = ">=0.87,<=1", default-features = false, features = ["client", "runtime"]}
rand = {version = "0.8", default-features = false}
thiserror = {version = "1", default-features = false}
tokio = {version = "1", default-features = false, features = ["macros", "sync", "time"]}
tracing = {version = "0.1", default-features = false}
