[package]
authors = ["Anthony Dodd <dodd.anthonyjosiah@gmail.com>"]
categories = ["asynchronous", "api-bindings"]
description = "Kubernetes leader election using the coordination.k8s.io API."
edition = "2021"
keywords = ["kubernetes", "election", "coordination", "consensus", "lease"]
license = "MIT/Apache-2.0"
name = "kube-coordinate"
version = "0.2.1"

[dependencies]
chrono = {version = ">=0.4,<0.5", default-features = false}
futures = {version = ">=0.3,<0.4", default-features = false}
k8s-openapi = {version = ">=0.20,<1", default-features = false}
kube = {version = ">=0.87,<=1", default-features = false, features = ["client", "runtime"]}
rand = {version = "0.8", default-features = false}
thiserror = {version = "1", default-features = false}
tokio = {version = "1", default-features = false, features = ["macros", "sync", "time"]}
tracing = {version = "0.1", default-features = false}

[features]
default = ["k8s_latest"]
k8s_earliest = ["k8s-openapi/earliest"]
v1_24 = ["k8s-openapi/v1_24"]
v1_25 = ["k8s-openapi/v1_25"]
v1_26 = ["k8s-openapi/v1_26"]
v1_27 = ["k8s-openapi/v1_27"]
v1_28 = ["k8s-openapi/v1_28"]
v1_29 = ["k8s-openapi/v1_29"]
k8s_latest = ["k8s-openapi/latest"]
